<resources>
    <string name="app_name">Connected App</string>
    <string name="get_error_message">Error Loading Data from the Google Books API</string>
    <string name="publisher">Publisher</string>
    <string name="authors">Authors</string>
    <string name="title">Title</string>
    <string name="published_date">Published Date</string>
    <string name="search">Search</string>
    <string name="hint_title">Insert name</string>
    <string name="hint_author">Insert author(s)</string>
    <string name="hint_publisher">Insert Publisher</string>
    <string name="hint_ISBN">Insert ISBN</string>
    <string name="advance_search">ADVANCE SEARCH</string>

    <string name="no_entry">PLease enter a valid search term</string>
</resources>