<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_marginTop="32dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical|center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/book_icon" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/title"
            android:textColor="#101288"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/authors"
            android:textColor="#373AE8"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPublisher"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintHorizontal_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/publisher"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPublishedDate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:text="@string/published_date"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>